welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
  if (nums.length > 3) {
    for (i <- 0 to 3) { if (nums(i) == 9) {return true} else return false}
  } else {
    for (j <- 0 to nums.length-1) { if (nums(i) == 9) {return true} else return false}
  }
}